change text try it to submit

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <li>15 days free trail</li>
             <li>data storage for 3 years</li>
          </ul>
-         <button class="btn btn-cover">Try it</button>
+         <button class="btn btn-cover">submit</button>
       </div>
     </div>
   </div>
